--- a/docs/01.products_requirements.md
+++ b/docs/01.products_requirements.md
@@ -1,32 +1,62 @@
-# 상품 목록 페이지 요구사항 분석 및 기능 목록
+# 상품 목록 페이지 요구사항 문서
+
+---
 
 ## 📌 기본 정보
 
-- **프로젝트명**: 추킹쇼핑몰 상품 목록 페이지 (모바일 최적화)
-- **사용 기술**: React
-- **문서 작성자**: 이정현(ezeonon), 최대리
+- **프로젝트명**: 추킹쇼핑몰 상품 목록 페이지
+- **사용 기술**: HTML, CSS, JavaScript, React
+- **문서 작성자**: 이정현(ezeonon)
+- **테스트 배포 URL**: https://www.figma.com/design/DKeR5wR65RkxcAWReoBccl/%EC%9D%91%EC%9A%A9%EC%86%8C%ED%94%84%ED%8A%B8%EC%9B%A8%EC%96%B4-%EB%94%94%EC%9E%90%EC%9D%B8-%EC%8B%9C%EC%95%88?node-id=0-1&p=f&t=aU88QpwR1WGqmlaM-0
+---
+
+## 🧾 고객사 요구사항 분석
+
+1. **주요 타겟**: 20~30대 젊은 세대 (스마트폰 사용 중심)
+2. **모바일 환경 최적화**: 모바일에서 쇼핑이 불편하면 구매 포기 가능성 → 반응형 UI 필수
+3. **상품 사진 강조**: 상품 목록에서 사진이 상품명보다 더 중요
+4. **장바구니 실시간 연동**: 사용자가 상품을 담을 때마다 장바구니에 몇 개 담겼는지 **실시간으로 헤더에 표시**
+5. **결과물 공유**: 작업 완료 후 테스트용 배포 URL을 공유하고, 내부 피드백 수렴
 
 ---
 
-## 📝 고객 요구사항 정리
+## 📋 기능 목록 및 컴포넌트 설계
 
-1. **주요 타겟**은 20~30대의 젊은 세대로, 대부분 모바일을 통해 쇼핑함.
-2. **모바일 환경 최적화**가 필수.  
-   웹페이지는 모바일 화면에서도 문제없이 작동해야 함.
-3. 사용자는 **아이쇼핑 → 장바구니 → 구매** 흐름을 따르며,  
-   **UX가 불편하거나 모바일 화면이 어긋나면 이탈** 발생.
-4. **상품 목록 페이지에는 사진이 가장 중요**함.  
-   상품명보다도 사진이 눈에 잘 띄도록 디자인 필요.
-5. **장바구니에 담긴 상품 개수는 실시간으로 헤더에 표시**되어야 함.
-6. 작업 결과물은 **테스트용 URL로 공유**, 사용성 피드백을 받을 계획.
+### 🛍️ 1. 상품 목록 UI
+
+- **기능 설명**: 2개의 열로 나뉘어진 카드 레이아웃으로 상품 출력
+- **사용 컴포넌트**:
+  - `<ProductList />`: 전체 상품 리스트
+  - `<ProductCard />`: 개별 상품 카드 (이미지, 이름, 가격, 버튼 포함)
 
 ---
 
-## 📋 기능 목록
+### 🛒 2. 장바구니 기능
 
-### 🛍 상품 리스트
-- 상품을 2개의 컬럼으로 구성
-- 썸네일 사진이 강조되어 표시됨
-- 상품명은 보조 정보로 간략히 표시
+- **기능 설명**: 장바구니에 상품 추가 시 상태 반영 + 헤더에 수량 반영
+- **사용 컴포넌트**:
+  - `<AddToCartButton />`: 상품 카드 내 버튼
+  - `<CartIndicator />`: 상단 헤더의 실시간 상품 개수 표시
+  - `CartContext`: 글로벌 장바구니 상태 저장
 
+---
 
+### 📱 3. 반응형 디자인
+
+- **기능 설명**: 다양한 화면 크기(모바일, 태블릿, PC)에 최적화된 레이아웃
+- **사용 기술**: CSS Grid, Flexbox, Media Query, Tailwind CSS 등
+
+---
+
+### 🔄 4. 무한 스크롤 기능 (선택 기능)
+
+- 사용자가 스크롤을 내릴수록 다음 상품을 자동으로 로드
+- Intersection Observer API 또는 라이브러리 활용
+- 성능 최적화를 위한 Lazy Loading 구조 고려
+
+---
+
+## 🧪 테스트 및 피드백 계획
+
+- 배포 후 테스트 URL 공유
+- 사내 구성원들의 피드백을 바탕으로 개선 작업 진행
